# mongo_drop

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: drop.rs
